test-2/objects/class_test__c.object
<CustomObject>
    <fields>
        <fullName>Test_V1__c</fullName>
        <label>Test V1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_V2__c</fullName>
        <label>Test V2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_V3__c</fullName>
        <label>Test V3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>class test</label>
    <nameField>
        <label>class test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>